{
    "name": "AppInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e802d882-c0c7-4181-8e8a-98ee0a1d31b6",
            "actions": [
                {
                    "name": "RotateView",
                    "type": "Value",
                    "id": "bcff9012-19bb-47e0-b5f0-c22d224031c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateViewKeyborad",
                    "type": "Button",
                    "id": "9d5202b1-f2ba-4ed6-b80c-e60943ebd3fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7ef3b963-4e50-4b26-9575-c7358f576d52",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "0cf5327d-1f71-414b-ba75-ccf345bda25c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pointer",
                    "type": "PassThrough",
                    "id": "b0e1ebbd-c551-4318-a0b7-472e7499937e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "fa5ebd44-1144-43eb-a323-b9ce37fa43ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeHeight",
                    "type": "Value",
                    "id": "2d42ce9a-959b-4302-9393-88cf408eb893",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Movement",
                    "type": "Value",
                    "id": "719827fb-6559-4a0f-8181-1d7660791c8b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Zoom",
                    "type": "Value",
                    "id": "51fed608-7593-4ecb-9e20-77f7eb48b20a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Rotate-Keyboard",
                    "type": "Value",
                    "id": "30f89e67-d21d-4bf9-a22f-85c719a58ac7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Movement-Mouse-Touch",
                    "type": "Value",
                    "id": "ed0ab754-81d7-42b3-a116-7d3f4aabe07c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Zoom-Rotation-Touch-T1",
                    "type": "Value",
                    "id": "3c4cf473-4537-4eb8-b30d-4e94ff50a3f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DHV-Zoom-Rotation-Touch-T2",
                    "type": "Value",
                    "id": "5a4e7b97-954f-4842-a799-9f1d7b670bcb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9efac98a-919e-40e3-bdb0-d34ca51c61b2",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.2,y=0.2)",
                    "groups": "Touchscreen",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93a9c1e8-d5d5-4fc0-8c68-89843672807f",
                    "path": "<Pen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79812bdb-eca7-4e2d-b977-9cd0f507ddaf",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "KeyboardAndMouse",
                    "action": "RotateView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7209ec38-8250-437e-998a-dbd77063f3ff",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Pointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "690d2d1d-b28e-4c53-8fcf-b2fd782c395a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Pointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "arrows",
                    "id": "f1f16253-6b30-4fcf-a8a3-0557c1fbedf2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a98335bb-a8ae-49b8-9ab8-20fda96fb615",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2f3d1af1-6995-434d-bf48-3bcfa566489d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "wasd",
                    "id": "d111dde3-9997-4806-bbb6-70824107c680",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6933eb39-19a2-47e6-a606-1d96d3bd3e01",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "805eff14-9233-41a3-91c3-e2037ec14a8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "50c6aee5-6aa3-4d1f-9325-1f2e60d9a871",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5e50053-b5ae-4c27-ab04-4473789df490",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "92d8b3a2-731a-4c82-b3bd-f0aaf9811666",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc02bb05-f6bc-4c04-b81f-09e76ba0eadd",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df59acf7-5825-4c96-9019-1083cd30e72f",
                    "path": "<Pen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ed6589d-77e6-43a8-9c7a-6614781abb7b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a507e70-ff3a-42a5-b736-6bc436865ed5",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KeyboardArrows",
                    "id": "4afb87d2-9162-4f50-a669-0e1f74564d7a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateViewKeyborad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "c9d3e362-2f1b-46a2-93d4-554d7dfc7e7c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "RotateViewKeyborad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d4168b13-e470-4793-babc-283529443427",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "RotateViewKeyborad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE_keys",
                    "id": "4fb79599-dd72-49eb-947d-ade008833463",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeHeight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a1d6652a-ce1c-409e-945f-73e3451808a7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeHeight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7ea62665-edf5-4228-8752-0aeacff733fd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeHeight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AWSD",
                    "id": "30accff8-05f7-4e44-bd1a-a8d812a801db",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DHV-Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7493cc40-a080-4626-a5b8-4931e88fabba",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f04490de-24c6-4a53-91a3-7e03ac548c90",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d1379247-7c20-4c8a-8f82-3909ffb1a33a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b0ae7eb5-6036-4d81-a043-8ba462b80e1a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "f68a710a-236d-4380-8428-c14f4371ca66",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DHV-Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5bf206fc-1f54-4d64-8b93-e327c52632bd",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "77b040fe-9c5f-4c25-9528-3235d7f478a2",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "arrows",
                    "id": "d4536aed-de4d-4733-a045-25313e94e18f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DHV-Rotate-Keyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "278fca7e-c9ce-44c6-bab2-bdd26f1a43a4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DHV-Rotate-Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b0c24131-0c07-428b-83f2-d2dd9bdbe948",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DHV-Rotate-Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "35efa184-ed89-439a-ac0a-e8e3c7a317df",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "KeyboardAndMouse",
                    "action": "DHV-Movement-Mouse-Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c092e980-3d00-45dd-9988-99724d3210f2",
                    "path": "<Pen>/delta",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "DHV-Movement-Mouse-Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1bada5a-0e7f-49c2-82e3-057cc3a4ad17",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "Touchscreen",
                    "action": "DHV-Movement-Mouse-Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe2f2f45-74df-49da-bdea-0237123b6ed3",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "DHV-Zoom-Rotation-Touch-T1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e568b07-9ab2-4900-b16f-f63d9d43328a",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "DHV-Zoom-Rotation-Touch-T2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "46924f64-9f3c-4047-a1d6-f2e7333bec2b",
            "actions": [
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "1e014d1d-4b11-4d67-8ccb-85b7fe674e58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "4cc946b1-913e-4068-a066-39ff6bfb0d5c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "2069370a-ad9f-40f0-9532-ed5cd514c3e9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1807b97b-5646-46c9-97f3-a3370dc8bd8e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "517be2f2-2058-40df-86a5-e44031b1408f",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "350dfaf7-3f3b-48b6-ba45-0aa30ac69a42",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e97212b1-f87f-4629-a099-11476cc80039",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ff699dd-17fb-4a46-a125-723c8900a03b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}